--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,6 @@
 /************************/
 
 body {
-
   position: relative;
   display: flex;
   width: 1571px;
@@ -998,98 +997,98 @@ footer {
   }
 
   nav ul li ::before {
-  display: none;
+    display: none;
   }
-  
+
   nav ul li ::after {
-   display: none;
+    display: none;
   }
-  
-  nav ul  :hover {
-    background-color:  #b3745ca4;
+
+  nav ul :hover {
+    background-color: #b3745ca4;
 
   }
 
   /************************/
-/*****STRONA GŁÓWNA******/
-/************************/
+  /*****STRONA GŁÓWNA******/
+  /************************/
 
-.main_wraper {
-  display: flex;
-  width: 100%;
-  height: calc(100vw - 1vh);
-}
+  .main_wraper {
+    display: flex;
+    width: 100%;
+    height: calc(100vw - 1vh);
+  }
 
-.main_wraper img {
-  display: flex;
-  right: 0%;
-  max-width: 100%;
-  width: 100%;
-  height: auto;
-}
+  .main_wraper img {
+    display: flex;
+    right: 0%;
+    max-width: 100%;
+    width: 100%;
+    height: auto;
+  }
 
-.main_wraper div {
-  display :none;
-}
+  .main_wraper div {
+    display: none;
+  }
 
-/************************/
-/*********O MNIE*********/
-/************************/
+  /************************/
+  /*********O MNIE*********/
+  /************************/
 
-#about_me {
-  display: flex;
-}
+  #about_me {
+    display: flex;
+  }
 
-.about_me_wraper {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  height: 400px;
-  flex-direction: column;
-}
+  .about_me_wraper {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 400px;
+    flex-direction: column;
+  }
 
-.about_me_main {
-  margin-left: 0%;
-  width: 100%;
-  height: 150px;
-}
+  .about_me_main {
+    margin-left: 0%;
+    width: 100%;
+    height: 150px;
+  }
 
-.about_me_main h1 {
-  font-size: 30px;
+  .about_me_main h1 {
+    font-size: 30px;
     top: 35%;
     left: 30%;
-}
+  }
 
-.about_me_main p {
-  vertical-align: initial;
-  top: 35%;
+  .about_me_main p {
+    vertical-align: initial;
+    top: 35%;
     left: 40%;
     font-size: 30px;
-  transform: rotate(0deg);
-  letter-spacing: 10px;
-  position: absolute;
-}
+    transform: rotate(0deg);
+    letter-spacing: 10px;
+    position: absolute;
+  }
 
-.about_me_img {
-  display: none;
-}
+  .about_me_img {
+    display: none;
+  }
 
-.about_me_txt {
-  margin-top: 10px;
-  width: 80%;
-  transform: translate(0%, 0%);
-}
+  .about_me_txt {
+    margin-top: 10px;
+    width: 80%;
+    transform: translate(0%, 0%);
+  }
 
-.about_me_txt p {
-  margin-top: 10px;
-  width: 100%;
-  font-size: 12px;
-}
+  .about_me_txt p {
+    margin-top: 10px;
+    width: 100%;
+    font-size: 12px;
+  }
 
-.about_me_txt h1 {
-  font-size: 0px;
-  margin: 10px;
-}
+  .about_me_txt h1 {
+    font-size: 0px;
+    margin: 10px;
+  }
 
   /************************/
   /********GALERIA*********/
@@ -1109,15 +1108,15 @@ footer {
 
   .galery_main h1 {
     font-size: 30px;
-      top: 10%;
-      left: 30%;
+    top: 10%;
+    left: 30%;
   }
 
   .galery_main p {
     vertical-align: initial;
     top: 10%;
-      left: 40%;
-      font-size: 30px;
+    left: 40%;
+    font-size: 30px;
     transform: rotate(0deg);
     letter-spacing: 10px;
   }
@@ -1527,10 +1526,12 @@ footer {
   aside {
     margin: 0%;
   }
+
   aside img {
     max-width: 60%;
     width: 60%;
   }
+
   nav {
     display: flex;
     flex-basis: 100%;
@@ -1544,97 +1545,97 @@ footer {
   }
 
   nav ul li ::before {
-  display: none;
+    display: none;
   }
-  
+
   nav ul li ::after {
-   display: none;
+    display: none;
   }
-  
-  nav ul  :hover {
-    background-color:  #b3745ca4;
+
+  nav ul :hover {
+    background-color: #b3745ca4;
 
   }
 
   /************************/
-/*****STRONA GŁÓWNA******/
-/************************/
+  /*****STRONA GŁÓWNA******/
+  /************************/
 
-.main_wraper {
-  display: flex;
-  width: 100%;
-  height: calc(100vw - 5vh);
-}
+  .main_wraper {
+    display: flex;
+    width: 100%;
+    height: calc(100vw - 5vh);
+  }
 
-.main_wraper img {
-  display: flex;
-  right: 0%;
-  max-width: 100%;
-  width: 100%;
-  height: auto;
-}
+  .main_wraper img {
+    display: flex;
+    right: 0%;
+    max-width: 100%;
+    width: 100%;
+    height: auto;
+  }
 
-.main_wraper div {
-  display :none;
-}
+  .main_wraper div {
+    display: none;
+  }
 
-/************************/
-/*********O MNIE*********/
-/************************/
+  /************************/
+  /*********O MNIE*********/
+  /************************/
 
-#about_me {
-  display: flex;
-}
+  #about_me {
+    display: flex;
+  }
 
-.about_me_wraper {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  height: 450px;
-  flex-direction: column;
-}
+  .about_me_wraper {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 450px;
+    flex-direction: column;
+  }
 
-.about_me_main {
-  margin-left: 0%;
-  width: 100%;
-  height: 500px;
-}
+  .about_me_main {
+    margin-left: 0%;
+    width: 100%;
+    height: 500px;
+  }
 
-.about_me_main h1 {
-  font-size: 40px;
+  .about_me_main h1 {
+    font-size: 40px;
     top: 35%;
     left: 30%;
-}
+  }
 
-.about_me_main p {
-  vertical-align: initial;
-  top: 35%;
+  .about_me_main p {
+    vertical-align: initial;
+    top: 35%;
     left: 40%;
     font-size: 40px;
-  transform: rotate(0deg) ;
-  letter-spacing: 10px;
-}
+    transform: rotate(0deg);
+    letter-spacing: 10px;
+  }
 
-.about_me_img {
-  display: none;
-}
+  .about_me_img {
+    display: none;
+  }
 
-.about_me_txt {
-  margin-top: 10px;
-  width: 80%;
-  transform: translate(0%, 0%);
-}
+  .about_me_txt {
+    margin-top: 10px;
+    width: 80%;
+    transform: translate(0%, 0%);
+  }
 
-.about_me_txt p {
-  margin-top: 10px;
-  width: 100%;
-  font-size: 14px;
-}
+  .about_me_txt p {
+    margin-top: 10px;
+    width: 100%;
+    font-size: 14px;
+  }
 
-.about_me_txt h1 {
-  font-size: 0px;
-  margin: 10px;
-}
+  .about_me_txt h1 {
+    font-size: 0px;
+    margin: 10px;
+  }
 
   /************************/
   /********GALERIA*********/
@@ -1654,15 +1655,15 @@ footer {
 
   .galery_main h1 {
     font-size: 40px;
-      top: 10%;
-      left: 30%;
+    top: 10%;
+    left: 30%;
   }
 
   .galery_main p {
     vertical-align: initial;
     top: 10%;
-      left: 40%;
-      font-size: 40px;
+    left: 40%;
+    font-size: 40px;
     transform: rotate(0deg);
     letter-spacing: 10px;
   }
@@ -1722,7 +1723,8 @@ footer {
 
   .serwises_wraper {
     margin-top: 15px;
-    width: 100%;;
+    width: 100%;
+    ;
     height: auto;
     flex-direction: column-reverse;
   }
@@ -2050,7 +2052,377 @@ footer {
 
 
 
-@media screen and (min-width: 786px) and (max-width: 1070px) {}
+@media all and (min-width: 786px) and (max-width: 1069px) {
+  body {
+    width: 100vw;
+  }
+
+  section {
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+  }
+
+  aside img {
+    max-width: 100%;
+  }
+
+  nav {
+    flex-basis: 50vw;
+  }
+
+  /************************/
+  /*****STRONA GŁÓWNA******/
+  /************************/
+
+  .main_wraper {
+    min-height: 50vh;
+    height: calc(100vw - 50vh);
+  }
+
+  .main_wraper img {
+    max-width: 100%;
+  }
+
+  .main_wraper div {
+    width: 40vw;
+    height: 230px;
+    left: 50%;
+  }
+
+  .main_wraper_text h1 {
+    transform: translate(-60%, 10%);
+  }
+
+  .main_wraper h1 :nth-child(1) {
+    font-size: 25px;
+  }
+
+  .main_wraper h1 :nth-child(2) {
+    transform: translate(40%, 0%);
+    font-size: 35px;
+  }
+
+  .main_wraper h1 :nth-child(3) {
+    margin-top: 15px;
+    font-size: 50px;
+  }
+
+  /************************/
+  /*********O MNIE*********/
+  /************************/
+
+
+  .about_me_wraper {
+    width: 100%;
+    height: 70vh;
+  }
+
+  .about_me_main {
+    margin-left: 1%;
+    width: 30vw;
+    height: 100%;
+  }
+
+
+  .about_me_main p {
+    top: 15%;
+    left: -20%;
+  }
+
+  .about_me_img {
+    width: 40vh;
+    transform: translate(-30%, 0%);
+  }
+
+  .about_me_img img {
+    width: 160%;
+    transform: translate(-15%, 0%);
+  }
+
+  .about_me_txt p {
+    font-size: 17px;
+  }
+
+  .about_me_txt h1 {
+    font-size: 18px;
+  }
+
+  /************************/
+  /********GALERIA*********/
+  /************************/
+
+
+  .galery_main p {
+    top: 15%;
+    left: -20%;
+  }
+
+  .galery_main ul {
+    top: 40%;
+    left: 10%;
+  }
+
+  .galery_main ul li a {
+    margin-bottom: 10px;
+    font-size: 13px;
+  }
+
+  /************************/
+  /*********USŁUGI*********/
+  /************************/
+
+
+  .serwises_main p {
+    top: 15%;
+    left: -20%;
+
+  }
+
+  .serwises_main ul {
+    left: 10%;
+    text-align: left;
+  }
+
+
+  .serwises_main ul li a {
+    margin-bottom: 10px;
+    font-size: 13px;
+  }
+
+
+  .serwises_page_1,
+  .serwises_page_2,
+  .serwises_page_3,
+  .serwises_page_4,
+  .serwises_page_5,
+  .serwises_page_6,
+  .serwises_page_7 {
+
+    font-size: 14px;
+  }
+
+  .serwises_page_1 h1,
+  .serwises_page_2 h1,
+  .serwises_page_3 h1,
+  .serwises_page_4 h1,
+  .serwises_page_5 h1,
+  .serwises_page_6 h1,
+  .serwises_page_7 h1 {
+    height: 3vh;
+    font-size: 16px;
+    text-align: center;
+  }
+
+  .serwises_page_1 span,
+  .serwises_page_2 span,
+  .serwises_page_3 span,
+  .serwises_page_4 span,
+  .serwises_page_5 span,
+  .serwises_page_6 span,
+  .serwises_page_7 span {
+    font-size: 14px;
+    width: 31%;
+    height: 27%;
+    padding: 10px;
+    line-height: 21px;
+    text-align: justify;
+  }
+
+  .serwises_page_1 span h1,
+  .serwises_page_2 span h1,
+  .serwises_page_3 span h1,
+  .serwises_page_4 span h1,
+  .serwises_page_5 span h1,
+  .serwises_page_6 span h1,
+  .serwises_page_7 span h1 {
+    margin-bottom: 10px;
+    text-align: left;
+    font-size: 14px;
+  }
+
+  .serwises_page_1 span i,
+  .serwises_page_2 span i,
+  .serwises_page_3 span i,
+  .serwises_page_4 span i,
+  .serwises_page_5 span i,
+  .serwises_page_6 span i,
+  .serwises_page_7 span i {
+    font-size: 16px;
+  }
+
+
+  /************************/
+  /*********CENNIK*********/
+  /************************/
+
+  .price_wraper {
+    margin-top: 0%;
+  }
+
+  .price_main p {
+    top: 15%;
+    left: -20%;
+  }
+
+  .price_main ul {
+    left: 10%;
+    text-align: left;
+  }
+
+
+  .price_main ul li a {
+    margin-bottom: 10px;
+    font-size: 13px;
+  }
+
+  .price {
+    display: flex;
+    width: 100vw;
+    height: 80vh;
+  }
+
+
+  .price_page_1 span:nth-child(1),
+  .price_page_2 span:nth-child(1),
+  .price_page_3 span:nth-child(1),
+  .price_page_4 span:nth-child(1),
+  .price_page_5 span:nth-child(1),
+  .price_page_6 span:nth-child(1),
+  .price_page_7 span:nth-child(1) {
+    width: 30%;
+    height: 75vh;
+    margin-left: 10px;
+  }
+
+  .price_page_1 span:nth-child(2),
+  .price_page_2 span:nth-child(2),
+  .price_page_3 span:nth-child(2),
+  .price_page_4 span:nth-child(2),
+  .price_page_5 span:nth-child(2),
+  .price_page_6 span:nth-child(2),
+  .price_page_7 span:nth-child(2) {
+    display: flex;
+    width: 65%;
+    height: 75vh;
+    margin-left: 10px;
+  }
+
+  .price span ul {
+    margin-top: 10px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .price span ul li {
+    margin-left: 10px;
+    font-size: 16px;
+    letter-spacing: 2px;
+    line-height: 30px;
+  }
+
+
+  .price span i {
+    font-size: 25px;
+  }
+
+  .price span a {
+    margin-top: 10%;
+    font-size: 23px;
+    line-height: 35px;
+  }
+
+  /************************/
+  /********STOPKA**********/
+  /************************/
+
+  footer {
+    display: flex;
+    background-color: black;
+    width: 100%;
+    height: auto;
+    font-size: 12px;
+  }
+
+
+  .footer_adress {
+
+    margin-left: 10px;
+    margin-top: 15px;
+    line-height: 20px;
+    flex-basis: 20%;
+    height: 30vh;
+    text-align: left;
+  }
+
+  .footer_price {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 20%;
+    height: 30vh;
+    margin: 10px;
+    line-height: 24px;
+  }
+
+  .footer_price h1 {
+    font-size: 12px;
+    margin-bottom: 8px;
+    letter-spacing: 2px;
+  }
+
+  .footer_price ul {
+    text-align: left;
+    font-size: 12px;
+
+  }
+
+  .footer_email {
+    flex-basis: 30%;
+    margin: 10px 20px 0px 20px;
+    line-height: 20px;
+    height: 30vh;
+  }
+
+  .footer_email div {
+    margin-top: 40px;
+    letter-spacing: 25px;
+  }
+
+  .footer_email i {
+    font-size: 35px;
+    transition: ease .5s;
+  }
+
+  .footer_email a[Alt_title]:after {
+    font-size: 10px;
+    padding: 2px 4px 2px 8px;
+    bottom: -1.6em;
+    letter-spacing: 3px;
+    left: -150%;
+    white-space: nowrap;
+    opacity: 0;
+    z-index: 99999;
+    visibility: hidden;
+  }
+
+  .footer_allrights {
+    height: auto;
+  }
+
+  .footer_map {
+    flex-basis: 30%;
+    height: 30vh;
+  }
+
+
+
+
+
+}
+
+@media all and (min-width: 1070px) and (max-width: 1215px) {}
+
+@media all and (min-width: 1216px) and (max-width: 1407px) {}
 
 
 /* 1050px (komputer)
