--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ section {
   display: flex;
   flex-direction: column;
   width: 90%;
-
+  overflow: hidden;
 }
 
 aside {
@@ -54,6 +54,12 @@ aside img {
   max-width: 100%;
   width: 100%;
 }
+
+.hamburger{
+display: none;
+
+}
+
 
 .altLogo {
   display: none;
@@ -568,7 +574,6 @@ nav ul li a i {
   width: 100%;
   height: 100%;
   background: white;
-  /*background:#BBBBBB;*/
   transition: all ease 0.5s;
   box-shadow: inset 0px -44px 30px -15px rgba(129, 66, 30, 0.10);
 }
@@ -752,7 +757,6 @@ nav ul li a i {
   width: 150px;
   border-radius: 50%;
   margin-top: 20%;
-  /* padding-top: 25px; */
   font-size: 30px;
   line-height: 110px;
 }
@@ -941,14 +945,12 @@ footer {
 
   main {
     flex-direction: column;
+    height: 15vh;
   }
 
   section {
-    flex-direction: column;
-    margin-left: 0px;
     width: 100%;
   }
-
 
   aside {
     margin: 0%;
@@ -959,12 +961,30 @@ footer {
     width: 60%;
   }
 
+  .hamburger {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+    font-size: 20px;
+    }
+
   nav {
     display: flex;
-    flex-basis: 100%;
+    position: relative;
     justify-content: center;
     margin-left: 0%;
+    width: 100%;
+    top: -270px;;
     align-items: center;
+    transition: .2s linear;
+  }
+
+  .hamburger.on {
+    transform: rotate(180deg);
+    }
+
+  nav.on {
+    top: 2vh;
   }
 
   nav ul {
@@ -1487,29 +1507,47 @@ footer {
 
   main {
     flex-direction: column;
+    height: 15vh;
   }
 
-  section {
-    flex-direction: column;
-    margin-left: 0px;
-    width: 100%;
-  }
+  
+section {
+  width: 100%;
+}
 
   aside {
     margin: 0%;
   }
 
   aside img {
-    max-width: 60%;
-    width: 60%;
+    max-width: 50%;
+    width: 500%;
   }
+
+  .hamburger {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+    font-size: 20px;
+    }
 
   nav {
     display: flex;
-    flex-basis: 100%;
+    position: relative;
     justify-content: center;
     margin-left: 0%;
+    width: 100%;
+    top: -270px;;
     align-items: center;
+    transition: .2s linear;;
+  }
+
+  .hamburger.on {
+    transform: rotate(180deg);
+    }
+
+  nav.on {
+    top: 2vh;
   }
 
   nav ul {
